deleted old manusacript

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,15 @@ input
 outputs/
 staging/
 .env
+
+# macOS system files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+.AppleDouble
+.LSOverride
+
+# Ignore .DS_Store in all directories
+**/.DS_Store
